--- a/src/components/header.css
+++ b/src/components/header.css
@@ -19,21 +19,7 @@
 .sidbar-container.active{
     left: 0;
 }
-.increase-sid-width{ 
-    position: absolute;
-    bottom: 50%; 
-    right: 0;
-    transform: translate(0,-50%);
-    width: 25px;
-    height: 30px; 
-    background-color: gray; 
-    cursor: pointer;  
-    display: none; 
-} 
-.sidbar-container:hover .increase-sid-width{ 
-    display: block;
-    transition: all ease-in-out 1s;
-}
+ 
 .close-sid-width{
     position: absolute;
     top: 17px;
@@ -129,7 +115,7 @@
     padding: 10px;
 }
 .user-info .user-image{
-    width:  50px;
+    width:  53px;
     height: 50px; 
     border-radius: 50%;
     position: relative;
@@ -162,38 +148,30 @@
 .items-comtainer{
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 2px;
     margin-top: 5px;
     padding: 0 8px;
 }
 .items-comtainer .items{
-    background-color: skyblue;
-    display: flex;
-    justify-content: space-between;
+    background-color: rgba(0,0,0,0.1);
+    display: flex; 
+    gap: 10px;
     align-items: center;
-    padding: 0 10px;
-    height: 60px;
-    color: white;
+    padding: 7px 20px; 
+    color: #234233;
     text-decoration: none;
     border-radius: 10px;
-    transition: all ease .2s; 
+    transition: all ease-in-out .2s; 
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
-.items-comtainer .items.ok{
-    background-color: rgb(10, 170, 233);
-}
+ 
 .items-comtainer .items:hover{
-    background-color: rgb(10, 170, 233);
+  background-color: rgba(0,0,0,0.3); 
+  color: #154273;
 }
-.items-comtainer .items .image{
-    width: 50px;
-    height: 50px; 
-    border-radius: 50%;
-    border: 1px solid  gray;
-    overflow: hidden;
-}
-.items-comtainer .items .image img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
+ 
 }
