--- a/src/components/displayProduct.css
+++ b/src/components/displayProduct.css
@@ -8,7 +8,7 @@
    box-shadow: 0 0 2px 1px gray;
  }
  .display-image img{
-   max-height: 300px;
+   max-height:  300px;  
  }
  .display-list-container{ 
    max-width: 350px;
@@ -21,7 +21,7 @@
    overflow-x: scroll;
    margin: 10px auto; 
    box-shadow: 0 0 4px 0 gray;
-   background: rgba(0,0,0,0.1);
+   background: 'white';
  }
  .display-list-container .display-list-iteam{
    height: 95px;
