--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   background: yellow;
 } 
 body{
-  background: white; 
+  background: white;  
 }
 
 
@@ -490,7 +490,9 @@ height: 130px;
    padding: 3px 15px;
 }
 @media (max-width:700px){
-
+body{
+  display: block;
+}
 .navebars{
  display: none; 
 position: absolute;
