--- a/src/components/header.css
+++ b/src/components/header.css
@@ -172,4 +172,17 @@
   color: #154273;
 }
 
+/* home banner styles */
+/* styles.css */
+.homebanner img { 
+  transform-origin: center;
+  perspective: 1000px;
+  transition: transform 5s ease-in-out;
+  cursor: pointer;
+}
+
+.homebanner img:hover {
+  transform: rotateY(360deg);
+}
+
   
